Updated the old site, fixed issues as well ✔

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Welcome to my page! 👾</title>
+<title>.nikkeisadev 👾</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -40,7 +40,7 @@
           <div class="banner-text">
             <h1 class="section-text text-responsive banner-text top-banner-text">.nikkeisadev</h1>
             <h3 class="white">Welcome to my Github page! 👋 </h3>
-            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications! ❤️ <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h3>
+            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️ <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h3>
             <ul>
               <li><a class="marginfix" href="https://github.com/nikkeisadev"><img src="images/github.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
               <li><a class="marginfix" href="#contacts"><img src="images/discord.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
@@ -60,26 +60,26 @@
         <div class="sectioner-header text-center">
           <h2 class="section-text">About</h2>
           <span class="line"></span>
-          <p class="section-text">I'm usually doin' game development, and desktop application development, mostly in Python. I'm also coding in Ruby, and C#.</p>
+          <p class="section-text">Usually coding desktop applications, mostly in Python also doing game development. I have some interest in reverse engineering as well. Also coding in Ruby, and C#.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-code" aria-hidden="true"></i>
-                <h5 class="section-text">Development</h5>
-                <p>You can hire me for Website creating, and desktop application programing. If you interested in this please contact me!</p>
+                <h5 class="section-text">Development 💻/h5>
+                <p>Coding in Python, C#, Ruby, and have a small knowledge in Flutter 💙.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.4s"> <i class="fa fa-rocket" aria-hidden="true"></i>
-                <h5 class="section-text">Publishment</h5>
-                <p>My projects are usually published at my github repositories, so check them!</p>
+                <h5 class="section-text">Projects 🚀</h5>
+                <p>My projects are published on my github repo site. I always appriciate a few stars on them 😁</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.6s"> <i class="fa fa-users" aria-hidden="true"></i>
-                <h5 class="section-text">Team</h5>
-                <p>I'm currently tryin' to make a team of developers to make things easier. Interested? Contact me anytime!</p>
+                <h5 class="section-text">Contacts 📨</h5>
+                <p>Email address: notnikkecrd@gmail.com 📭</p>
               </div>
             </div>
           </div>
@@ -92,16 +92,16 @@
 <section class="video-section prelative text-center white">
   <div class="section-padding video-overlay">
     <div class="container">
-      <h3>Wanna see my newest project? Video is coming soon!</h3>
-      <h4>Premier in december.👈</h4>
-      <!---<i class="fa fa-play" id="video-icon" aria-hidden="true"></i>
+      <h3>Biggest project from the last months.</h3>
+      <h4>Click to watch the video.</h4>
+      <i class="fa fa-play" id="video-icon" aria-hidden="true"></i>
         <div class="video-popup">
           <div class="video-src">
             <div class="iframe-src">
-              <iframe src="" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/watch?v=pboiQy_5B8g" allowfullscreen></iframe>
             </div>
           </div>
-        </div>-->
+        </div>
     </div>
   </div>
 </section>
@@ -109,11 +109,11 @@
 <section id="contact">
 </section>
 	
-<footer id='contacts' class="footer-copy">
+<footer style="border-radius: 1em;" id='contacts' class="footer-copy">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <p class="section-text">Made by nikkeisadev | Amadeus | AmadeusArcade | notnikkecrd@gmail.com</p>
+        <p class="section-text">.nikkeisadev ✨| notnikkecrd@gmail.com 📧</p>
       </div>
     </div>
   </div>
