--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="banner-text">
             <h1 class="section-text text-responsive banner-text top-banner-text">.nikkeisadev</h1>
             <h3 class="white">Welcome to my Github page! 👋 </h3>
-            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️ <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h3>
+            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️<br> <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h3>
             <ul>
               <li><a class="marginfix" href="https://github.com/nikkeisadev"><img src="images/github.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
               <li><a class="marginfix" href="#contacts"><img src="images/discord.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
@@ -58,15 +58,15 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center">
-          <h2 class="section-text">About</h2>
+          <h2 class="section-text">About 🎊</h2>
           <span class="line"></span>
-          <p class="section-text">Usually coding desktop applications, mostly in Python also doing game development. I have some interest in reverse engineering as well. Also coding in Ruby, and C#.</p>
+          <p class="section-text">Coding desktop applications, mostly in Python also doing game development. 🎮👨‍💻 I have some interest in reverse engineering as well. 🛠 Also coding in Ruby, and C#.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-code" aria-hidden="true"></i>
-                <h5 class="section-text">Development 💻/h5>
+                <h5 class="section-text">Development 💻</h5>
                 <p>Coding in Python, C#, Ruby, and have a small knowledge in Flutter 💙.</p>
               </div>
             </div>
