--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="https://github.com/nikkeisadev?tab=repositories">Projects</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#contact" data-scroll-nav="6">Contact</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home 🏡</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About 📚</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="https://github.com/nikkeisadev?tab=repositories">Projects 💻</a> </li>
       </ul>
     </div>
   </div>
