--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="video-popup">
           <div class="video-src">
             <div class="iframe-src">
-              <iframe src="https://www.youtube.com/watch?v=pboiQy_5B8g&feature=youtu.be" allowfullscreen></iframe>
+              <iframe src="https://youtu.be/pboiQy_5B8g" allowfullscreen></iframe>
             </div>
           </div>
         </div>
