--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 mx-auto d-none d-md-block"> <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"/> </div>
+        <div class="col-md-4 col-sm-12 mx-auto d-none d-md-block"> <img style="width: 11em;" src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"/> </div>
       </div>
     </div>
   </div>
