--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
           </div>
         </div>
-        <div style="width:2000px;" class="col-md-4 col-sm-4 mx-auto d-none d-md-block"> <img style="width:2000px;" src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"/> </div>
+        <div style="width:2000px;" class="col-md-4 mx-auto d-none d-md-block"> <img style="width:2000px;" src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"/> </div>
       </div>
     </div>
   </div>
