--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
             </ul>
           </div>
         </div>
-        <div style="width:2000px;" class="col-md-4 mx-auto d-none d-md-block"> <img style="width:2000px;" src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"/> </div>
+        <div style="width: 2000px;" class="col-md-4 mx-auto d-none d-md-block">
+          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"
+               style="max-width: 100%; max-height: 100%; height: auto;">
       </div>
+            </div>
     </div>
   </div>
   
