--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>.nikkeisadev 👾</title>
+<link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -46,11 +47,10 @@
             </ul>
           </div>
         </div>
-        <div style="width: 2000px;" class="col-md-4 mx-auto d-none d-md-block">
-          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp"
-               style="max-width: 100%; max-height: 100%; height: auto;">
+        <div class="col-md-4 mx-auto d-none d-md-block">
+          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
+        </div>      
       </div>
-            </div>
     </div>
   </div>
   
