Using row for scale fixing 📐

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4 mx-auto d-none d-md-block">
-          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
-        </div>      
+        <div class="row">
+          <div class="col-md-4 d-none d-md-block">
+            <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
+          </div>
+        </div> 
       </div>
     </div>
   </div>
