--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="banner" data-scroll-index='0'>
   <div class="banner-overlay">
     <div class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-8 col-sm-12">
           <div class="banner-text">
             <h1 class="section-text text-responsive banner-text top-banner-text">.nikkeisadev</h1>
@@ -47,14 +47,13 @@
             </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4 d-none d-md-block">
-            <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
-          </div>
-        </div> 
+        <div class="col-md-4 d-none d-md-block">
+          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
+        </div>
       </div>
     </div>
   </div>
+</section>
   
 
 <section class="about section-padding prelative" data-scroll-index='1'>
