--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="banner-text">
             <h1 class="section-text text-responsive banner-text top-banner-text">.nikkeisadev</h1>
             <h3 class="white">Welcome to my Github page! 👋 </h3>
-            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️<br> <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h3>
+            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️<br> <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h5>
             <ul>
               <li><a class="marginfix" href="https://github.com/nikkeisadev"><img src="images/github.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
               <li><a class="marginfix" href="#contacts"><img src="images/discord.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
@@ -48,7 +48,9 @@
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
+          <div class="image-container">
+            <img src="images/nikkeisadev_logo_site_image.png" class="img-fluid wow fadeInUp custom-image-size"/>
+          </div>
         </div>
       </div>
     </div>
