Changes are finished 👍

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-<link rel="icon" href="images/icon.png" type="image/icon type">
+<link rel="icon" href="images/batbash_web.png" type="image/icon type">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,9 +24,11 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home 🏡</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About 📚</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="https://github.com/nikkeisadev?tab=repositories">Projects 💻</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">home 🏡</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">about 📚</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="https://github.com/nikkeisadev?tab=repositories">projects 💻</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="https://youtu.be/pboiQy_5B8g">youtube 🔴</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#awards">awards 🏆 (not yet)</a> </li>
       </ul>
     </div>
   </div>
@@ -39,8 +41,8 @@
         <div class="col-md-8 col-sm-12">
           <div class="banner-text">
             <h1 class="section-text text-responsive banner-text top-banner-text">.nikkeisadev</h1>
-            <h3 class="white">Welcome to my Github page! 👋 </h3>
-            <h5 class="banner-text white">I'm Nikke, a software engineer who loves to create desktop applications and websites! ❤️<br> <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h5>
+            <h3 class="white text-responsive">Welcome to my Github page!👋 </h3>
+            <h5 class="banner-text white text-responsive">I'm Nikke, a software engineer who loves to <br> create desktop applications and websites! ❤️ <a href="https://github.com/nikkeisadev?tab=repositories" style="text-decoration: none;">Check my projects!</a></h5>
             <ul>
               <li><a class="marginfix" href="https://github.com/nikkeisadev"><img src="images/github.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
               <li><a class="marginfix" href="#contacts"><img src="images/discord.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
@@ -65,14 +67,14 @@
         <div class="sectioner-header text-center">
           <h2 class="section-text">About 🎊</h2>
           <span class="line"></span>
-          <p class="section-text">Coding desktop applications, mostly in Python also doing game development. 🎮👨‍💻 I have some interest in reverse engineering as well. 🛠 Also coding in Ruby, and C#.</p>
+          <p class="section-text">Coding desktop applications, mostly in Python also doing game development. 🎮👨‍💻 I have some interest in reverse engineering as well.🔨 Also coding in 💝Ruby, and 💜C#.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-code" aria-hidden="true"></i>
                 <h5 class="section-text">Development 💻</h5>
-                <p>Coding in Python, C#, Ruby, and have a small knowledge in Flutter 💙.</p>
+                <p>Coding in 🔵Python, 🟣C#, 🔴Ruby, and have a small knowledge in 💙Flutter.</p>
               </div>
             </div>
             <div class="col-md-4">
